# FrictionModelling

./: .gitignore  LICENSE  README.md  friction.py  friction_simple.py  main.py  plot_gamma.py  plotly_viz.py  pre_compute_ls.py  test4.py  test_integral_vs_reduced.py  test_number_cells.py  test_step_time.py
frictionModels/: debug_.py  frictionModel.py  frictionModel_copy.py  utils.py
frictionModelsCPP/: CMakeLists.txt  distributedModel.cpp  distributedModel.h  fullModel.cpp  fullModel.h  main.cpp  reducedModel.cpp  reducedModel.h  test.py  utils.cpp  utils.h  utils_gpt.cpp
plotlyVizualization/: layout.py  plotly_viz.py  utils.py
surfaces/: surfaces.py  utils.py
test_ode_solver/: 2dLuGreDriftTest_solver.py  distributed_vs_reduced_solver.py  distributed_vs_reduced_solver_bounds.py  friction_models_cpp.py  planar_slip_stick_change_surf_solver.py  planar_slip_stick_sim_time.py  planar_slip_stick_solver.py  planar_slip_stick_solver_diff_CoM.py
tests/: 2dLuGreDriftTest.py  2dLuGreDriftTestNormal.py  animate_del.py  computational_speed_test.py  discrete_force_steps.py  discrete_force_steps2.py  distributed_vs_reduced.py  dynamics_mass_spring.py  dynamics_mass_spring_ode.py  elasto_plastic_LuGre_drifting.py  ellips_plot_test.py  ellipsoid.py  full_vs_reduced.py  nom_cells_red.txt  num_Ls_segments_reduced_model.py  num_cells.py  num_cells.txt  num_cells_reduced_model.py  num_cells_reduced_model_mesh_size.py  planar_slip_stick.py  planar_slip_stick_diff_CoM.py  plot_Limit_surface.py  plot_Limit_surface_test_pre.py  plot_surface.py  plot_surfaces.py  plot_surfaces_prop.py  (+3 more)
